parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> class_list
Rule 2     class -> CLASS TYPE LBRACE RBRACE
Rule 3     class -> CLASS TYPE INHERITS TYPE LBRACE RBRACE
Rule 4     class -> CLASS TYPE INHERITS TYPE LBRACE feature_list RBRACE
Rule 5     class -> CLASS TYPE LBRACE feature_list RBRACE
Rule 6     class_list -> class SEMI class_list
Rule 7     class_list -> empty
Rule 8     feature -> IDENTIFIER COLON TYPE
Rule 9     feature -> IDENTIFIER COLON TYPE LARROW expression
Rule 10    feature -> IDENTIFIER LPAREN formal_list RPAREN COLON TYPE LBRACE expression RBRACE
Rule 11    feature -> IDENTIFIER LPAREN RPAREN COLON TYPE LBRACE expression RBRACE
Rule 12    feature_list -> feature SEMI feature_list
Rule 13    feature_list -> empty
Rule 14    formal -> IDENTIFIER COLON TYPE
Rule 15    formal_list -> formal COMMA formal_list
Rule 16    formal_list -> formal
Rule 17    expression -> expr_assign
Rule 18    expression -> expr_let
Rule 19    expression -> expr_dispatch
Rule 20    expression -> expr_loop
Rule 21    expression -> expr_block
Rule 22    expression -> expr_newtype
Rule 23    expression -> expr_mathcondition
Rule 24    expression -> expr_ID
Rule 25    expression -> expr_int
Rule 26    expression -> expr_string
Rule 27    expression -> expr_bool
Rule 28    expression -> expr_case
Rule 29    expression -> LPAREN expression RPAREN
Rule 30    expression_list -> expression SEMI expression_list
Rule 31    expression_list -> empty
Rule 32    expr_assign -> IDENTIFIER LARROW expression
Rule 33    expr_let -> LET binding_list IN expression
Rule 34    binding -> IDENTIFIER COLON TYPE
Rule 35    binding -> IDENTIFIER COLON TYPE LARROW expression
Rule 36    binding_list -> binding COMMA binding_list
Rule 37    binding_list -> binding
Rule 38    expr_dispatch -> expression DOT IDENTIFIER LPAREN args_list RPAREN
Rule 39    expr_dispatch -> expression DOT IDENTIFIER LPAREN RPAREN
Rule 40    expr_dispatch -> expression AT TYPE DOT IDENTIFIER LPAREN args_list RPAREN
Rule 41    expr_dispatch -> expression AT TYPE DOT IDENTIFIER LPAREN RPAREN
Rule 42    expr_dispatch -> IDENTIFIER LPAREN args_list RPAREN
Rule 43    expr_dispatch -> IDENTIFIER LPAREN RPAREN
Rule 44    args_list -> expression COMMA args_list
Rule 45    args_list -> expression
Rule 46    expr_loop -> IF expression THEN expression ELSE expression FI
Rule 47    expr_loop -> WHILE expression LOOP expression POOL
Rule 48    expr_block -> LBRACE expression_list RBRACE
Rule 49    expr_case -> CASE expression OF element_list ESAC
Rule 50    expr_case_element -> IDENTIFIER COLON TYPE RARROW expression SEMI
Rule 51    element_list -> expr_case_element element_list
Rule 52    element_list -> expr_case_element
Rule 53    expr_newtype -> NEW TYPE
Rule 54    expr_mathcondition -> expression PLUS expression
Rule 55    expr_mathcondition -> expression MINUS expression
Rule 56    expr_mathcondition -> expression TIMES expression
Rule 57    expr_mathcondition -> expression DIVIDE expression
Rule 58    expr_mathcondition -> expression LT expression
Rule 59    expr_mathcondition -> expression LE expression
Rule 60    expr_mathcondition -> expression EQUALS expression
Rule 61    expr_mathcondition -> TILDE expression
Rule 62    expr_mathcondition -> NOT expression
Rule 63    expr_mathcondition -> ISVOID expression
Rule 64    expr_ID -> IDENTIFIER
Rule 65    expr_int -> INTEGER
Rule 66    expr_string -> STRING
Rule 67    expr_bool -> TRUE
Rule 68    expr_bool -> FALSE
Rule 69    empty -> <empty>

Terminals, with rules where they appear

AT                   : 40 41
CASE                 : 49
CLASS                : 2 3 4 5
COLON                : 8 9 10 11 14 34 35 50
COMMA                : 15 36 44
DIVIDE               : 57
DOT                  : 38 39 40 41
ELSE                 : 46
EQUALS               : 60
ESAC                 : 49
FALSE                : 68
FI                   : 46
IDENTIFIER           : 8 9 10 11 14 32 34 35 38 39 40 41 42 43 50 64
IF                   : 46
IN                   : 33
INHERITS             : 3 4
INTEGER              : 65
ISVOID               : 63
LARROW               : 9 32 35
LBRACE               : 2 3 4 5 10 11 48
LE                   : 59
LET                  : 33
LOOP                 : 47
LPAREN               : 10 11 29 38 39 40 41 42 43
LT                   : 58
MINUS                : 55
NEW                  : 53
NOT                  : 62
OF                   : 49
PLUS                 : 54
POOL                 : 47
RARROW               : 50
RBRACE               : 2 3 4 5 10 11 48
RPAREN               : 10 11 29 38 39 40 41 42 43
SEMI                 : 6 12 30 50
STRING               : 66
THEN                 : 46
TILDE                : 61
TIMES                : 56
TRUE                 : 67
TYPE                 : 2 3 3 4 4 5 8 9 10 11 14 34 35 40 41 50 53
WHILE                : 47
error                : 

Nonterminals, with rules where they appear

args_list            : 38 40 42 44
binding              : 36 37
binding_list         : 33 36
class                : 6
class_list           : 1 6
element_list         : 49 51
empty                : 7 13 31
expr_ID              : 24
expr_assign          : 17
expr_block           : 21
expr_bool            : 27
expr_case            : 28
expr_case_element    : 51 52
expr_dispatch        : 19
expr_int             : 25
expr_let             : 18
expr_loop            : 20
expr_mathcondition   : 23
expr_newtype         : 22
expr_string          : 26
expression           : 9 10 11 29 30 32 33 35 38 39 40 41 44 45 46 46 46 47 47 49 50 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 62 63
expression_list      : 30 48
feature              : 12
feature_list         : 4 5 12
formal               : 15 16
formal_list          : 10 15
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . class_list
    (6) class_list -> . class SEMI class_list
    (7) class_list -> . empty
    (2) class -> . CLASS TYPE LBRACE RBRACE
    (3) class -> . CLASS TYPE INHERITS TYPE LBRACE RBRACE
    (4) class -> . CLASS TYPE INHERITS TYPE LBRACE feature_list RBRACE
    (5) class -> . CLASS TYPE LBRACE feature_list RBRACE
    (69) empty -> .

    CLASS           shift and go to state 5
    $end            reduce using rule 69 (empty -> .)

    program                        shift and go to state 1
    class_list                     shift and go to state 2
    class                          shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> class_list .

    $end            reduce using rule 1 (program -> class_list .)


state 3

    (6) class_list -> class . SEMI class_list

    SEMI            shift and go to state 6


state 4

    (7) class_list -> empty .

    $end            reduce using rule 7 (class_list -> empty .)


state 5

    (2) class -> CLASS . TYPE LBRACE RBRACE
    (3) class -> CLASS . TYPE INHERITS TYPE LBRACE RBRACE
    (4) class -> CLASS . TYPE INHERITS TYPE LBRACE feature_list RBRACE
    (5) class -> CLASS . TYPE LBRACE feature_list RBRACE

    TYPE            shift and go to state 7


state 6

    (6) class_list -> class SEMI . class_list
    (6) class_list -> . class SEMI class_list
    (7) class_list -> . empty
    (2) class -> . CLASS TYPE LBRACE RBRACE
    (3) class -> . CLASS TYPE INHERITS TYPE LBRACE RBRACE
    (4) class -> . CLASS TYPE INHERITS TYPE LBRACE feature_list RBRACE
    (5) class -> . CLASS TYPE LBRACE feature_list RBRACE
    (69) empty -> .

    CLASS           shift and go to state 5
    $end            reduce using rule 69 (empty -> .)

    class                          shift and go to state 3
    class_list                     shift and go to state 8
    empty                          shift and go to state 4

state 7

    (2) class -> CLASS TYPE . LBRACE RBRACE
    (3) class -> CLASS TYPE . INHERITS TYPE LBRACE RBRACE
    (4) class -> CLASS TYPE . INHERITS TYPE LBRACE feature_list RBRACE
    (5) class -> CLASS TYPE . LBRACE feature_list RBRACE

    LBRACE          shift and go to state 9
    INHERITS        shift and go to state 10


state 8

    (6) class_list -> class SEMI class_list .

    $end            reduce using rule 6 (class_list -> class SEMI class_list .)


state 9

    (2) class -> CLASS TYPE LBRACE . RBRACE
    (5) class -> CLASS TYPE LBRACE . feature_list RBRACE
    (12) feature_list -> . feature SEMI feature_list
    (13) feature_list -> . empty
    (8) feature -> . IDENTIFIER COLON TYPE
    (9) feature -> . IDENTIFIER COLON TYPE LARROW expression
    (10) feature -> . IDENTIFIER LPAREN formal_list RPAREN COLON TYPE LBRACE expression RBRACE
    (11) feature -> . IDENTIFIER LPAREN RPAREN COLON TYPE LBRACE expression RBRACE
    (69) empty -> .

  ! shift/reduce conflict for RBRACE resolved as shift
    RBRACE          shift and go to state 11
    IDENTIFIER      shift and go to state 15

  ! RBRACE          [ reduce using rule 69 (empty -> .) ]

    feature_list                   shift and go to state 12
    feature                        shift and go to state 13
    empty                          shift and go to state 14

state 10

    (3) class -> CLASS TYPE INHERITS . TYPE LBRACE RBRACE
    (4) class -> CLASS TYPE INHERITS . TYPE LBRACE feature_list RBRACE

    TYPE            shift and go to state 16


state 11

    (2) class -> CLASS TYPE LBRACE RBRACE .

    SEMI            reduce using rule 2 (class -> CLASS TYPE LBRACE RBRACE .)


state 12

    (5) class -> CLASS TYPE LBRACE feature_list . RBRACE

    RBRACE          shift and go to state 17


state 13

    (12) feature_list -> feature . SEMI feature_list

    SEMI            shift and go to state 18


state 14

    (13) feature_list -> empty .

    RBRACE          reduce using rule 13 (feature_list -> empty .)


state 15

    (8) feature -> IDENTIFIER . COLON TYPE
    (9) feature -> IDENTIFIER . COLON TYPE LARROW expression
    (10) feature -> IDENTIFIER . LPAREN formal_list RPAREN COLON TYPE LBRACE expression RBRACE
    (11) feature -> IDENTIFIER . LPAREN RPAREN COLON TYPE LBRACE expression RBRACE

    COLON           shift and go to state 19
    LPAREN          shift and go to state 20


state 16

    (3) class -> CLASS TYPE INHERITS TYPE . LBRACE RBRACE
    (4) class -> CLASS TYPE INHERITS TYPE . LBRACE feature_list RBRACE

    LBRACE          shift and go to state 21


state 17

    (5) class -> CLASS TYPE LBRACE feature_list RBRACE .

    SEMI            reduce using rule 5 (class -> CLASS TYPE LBRACE feature_list RBRACE .)


state 18

    (12) feature_list -> feature SEMI . feature_list
    (12) feature_list -> . feature SEMI feature_list
    (13) feature_list -> . empty
    (8) feature -> . IDENTIFIER COLON TYPE
    (9) feature -> . IDENTIFIER COLON TYPE LARROW expression
    (10) feature -> . IDENTIFIER LPAREN formal_list RPAREN COLON TYPE LBRACE expression RBRACE
    (11) feature -> . IDENTIFIER LPAREN RPAREN COLON TYPE LBRACE expression RBRACE
    (69) empty -> .

    IDENTIFIER      shift and go to state 15
    RBRACE          reduce using rule 69 (empty -> .)

    feature                        shift and go to state 13
    feature_list                   shift and go to state 22
    empty                          shift and go to state 14

state 19

    (8) feature -> IDENTIFIER COLON . TYPE
    (9) feature -> IDENTIFIER COLON . TYPE LARROW expression

    TYPE            shift and go to state 23


state 20

    (10) feature -> IDENTIFIER LPAREN . formal_list RPAREN COLON TYPE LBRACE expression RBRACE
    (11) feature -> IDENTIFIER LPAREN . RPAREN COLON TYPE LBRACE expression RBRACE
    (15) formal_list -> . formal COMMA formal_list
    (16) formal_list -> . formal
    (14) formal -> . IDENTIFIER COLON TYPE

    RPAREN          shift and go to state 26
    IDENTIFIER      shift and go to state 24

    formal_list                    shift and go to state 25
    formal                         shift and go to state 27

state 21

    (3) class -> CLASS TYPE INHERITS TYPE LBRACE . RBRACE
    (4) class -> CLASS TYPE INHERITS TYPE LBRACE . feature_list RBRACE
    (12) feature_list -> . feature SEMI feature_list
    (13) feature_list -> . empty
    (8) feature -> . IDENTIFIER COLON TYPE
    (9) feature -> . IDENTIFIER COLON TYPE LARROW expression
    (10) feature -> . IDENTIFIER LPAREN formal_list RPAREN COLON TYPE LBRACE expression RBRACE
    (11) feature -> . IDENTIFIER LPAREN RPAREN COLON TYPE LBRACE expression RBRACE
    (69) empty -> .

  ! shift/reduce conflict for RBRACE resolved as shift
    RBRACE          shift and go to state 28
    IDENTIFIER      shift and go to state 15

  ! RBRACE          [ reduce using rule 69 (empty -> .) ]

    feature_list                   shift and go to state 29
    feature                        shift and go to state 13
    empty                          shift and go to state 14

state 22

    (12) feature_list -> feature SEMI feature_list .

    RBRACE          reduce using rule 12 (feature_list -> feature SEMI feature_list .)


state 23

    (8) feature -> IDENTIFIER COLON TYPE .
    (9) feature -> IDENTIFIER COLON TYPE . LARROW expression

    SEMI            reduce using rule 8 (feature -> IDENTIFIER COLON TYPE .)
    LARROW          shift and go to state 30


state 24

    (14) formal -> IDENTIFIER . COLON TYPE

    COLON           shift and go to state 31


state 25

    (10) feature -> IDENTIFIER LPAREN formal_list . RPAREN COLON TYPE LBRACE expression RBRACE

    RPAREN          shift and go to state 32


state 26

    (11) feature -> IDENTIFIER LPAREN RPAREN . COLON TYPE LBRACE expression RBRACE

    COLON           shift and go to state 33


state 27

    (15) formal_list -> formal . COMMA formal_list
    (16) formal_list -> formal .

    COMMA           shift and go to state 34
    RPAREN          reduce using rule 16 (formal_list -> formal .)


state 28

    (3) class -> CLASS TYPE INHERITS TYPE LBRACE RBRACE .

    SEMI            reduce using rule 3 (class -> CLASS TYPE INHERITS TYPE LBRACE RBRACE .)


state 29

    (4) class -> CLASS TYPE INHERITS TYPE LBRACE feature_list . RBRACE

    RBRACE          shift and go to state 35


state 30

    (9) feature -> IDENTIFIER COLON TYPE LARROW . expression
    (17) expression -> . expr_assign
    (18) expression -> . expr_let
    (19) expression -> . expr_dispatch
    (20) expression -> . expr_loop
    (21) expression -> . expr_block
    (22) expression -> . expr_newtype
    (23) expression -> . expr_mathcondition
    (24) expression -> . expr_ID
    (25) expression -> . expr_int
    (26) expression -> . expr_string
    (27) expression -> . expr_bool
    (28) expression -> . expr_case
    (29) expression -> . LPAREN expression RPAREN
    (32) expr_assign -> . IDENTIFIER LARROW expression
    (33) expr_let -> . LET binding_list IN expression
    (38) expr_dispatch -> . expression DOT IDENTIFIER LPAREN args_list RPAREN
    (39) expr_dispatch -> . expression DOT IDENTIFIER LPAREN RPAREN
    (40) expr_dispatch -> . expression AT TYPE DOT IDENTIFIER LPAREN args_list RPAREN
    (41) expr_dispatch -> . expression AT TYPE DOT IDENTIFIER LPAREN RPAREN
    (42) expr_dispatch -> . IDENTIFIER LPAREN args_list RPAREN
    (43) expr_dispatch -> . IDENTIFIER LPAREN RPAREN
    (46) expr_loop -> . IF expression THEN expression ELSE expression FI
    (47) expr_loop -> . WHILE expression LOOP expression POOL
    (48) expr_block -> . LBRACE expression_list RBRACE
    (53) expr_newtype -> . NEW TYPE
    (54) expr_mathcondition -> . expression PLUS expression
    (55) expr_mathcondition -> . expression MINUS expression
    (56) expr_mathcondition -> . expression TIMES expression
    (57) expr_mathcondition -> . expression DIVIDE expression
    (58) expr_mathcondition -> . expression LT expression
    (59) expr_mathcondition -> . expression LE expression
    (60) expr_mathcondition -> . expression EQUALS expression
    (61) expr_mathcondition -> . TILDE expression
    (62) expr_mathcondition -> . NOT expression
    (63) expr_mathcondition -> . ISVOID expression
    (64) expr_ID -> . IDENTIFIER
    (65) expr_int -> . INTEGER
    (66) expr_string -> . STRING
    (67) expr_bool -> . TRUE
    (68) expr_bool -> . FALSE
    (49) expr_case -> . CASE expression OF element_list ESAC

    LPAREN          shift and go to state 50
    IDENTIFIER      shift and go to state 36
    LET             shift and go to state 51
    IF              shift and go to state 52
    WHILE           shift and go to state 53
    LBRACE          shift and go to state 54
    NEW             shift and go to state 55
    TILDE           shift and go to state 56
    NOT             shift and go to state 57
    ISVOID          shift and go to state 58
    INTEGER         shift and go to state 59
    STRING          shift and go to state 60
    TRUE            shift and go to state 61
    FALSE           shift and go to state 62
    CASE            shift and go to state 63

    expression                     shift and go to state 37
    expr_assign                    shift and go to state 38
    expr_let                       shift and go to state 39
    expr_dispatch                  shift and go to state 40
    expr_loop                      shift and go to state 41
    expr_block                     shift and go to state 42
    expr_newtype                   shift and go to state 43
    expr_mathcondition             shift and go to state 44
    expr_ID                        shift and go to state 45
    expr_int                       shift and go to state 46
    expr_string                    shift and go to state 47
    expr_bool                      shift and go to state 48
    expr_case                      shift and go to state 49

state 31

    (14) formal -> IDENTIFIER COLON . TYPE

    TYPE            shift and go to state 64


state 32

    (10) feature -> IDENTIFIER LPAREN formal_list RPAREN . COLON TYPE LBRACE expression RBRACE

    COLON           shift and go to state 65


state 33

    (11) feature -> IDENTIFIER LPAREN RPAREN COLON . TYPE LBRACE expression RBRACE

    TYPE            shift and go to state 66


state 34

    (15) formal_list -> formal COMMA . formal_list
    (15) formal_list -> . formal COMMA formal_list
    (16) formal_list -> . formal
    (14) formal -> . IDENTIFIER COLON TYPE

    IDENTIFIER      shift and go to state 24

    formal                         shift and go to state 27
    formal_list                    shift and go to state 67

state 35

    (4) class -> CLASS TYPE INHERITS TYPE LBRACE feature_list RBRACE .

    SEMI            reduce using rule 4 (class -> CLASS TYPE INHERITS TYPE LBRACE feature_list RBRACE .)


state 36

    (32) expr_assign -> IDENTIFIER . LARROW expression
    (42) expr_dispatch -> IDENTIFIER . LPAREN args_list RPAREN
    (43) expr_dispatch -> IDENTIFIER . LPAREN RPAREN
    (64) expr_ID -> IDENTIFIER .

    LARROW          shift and go to state 68
    LPAREN          shift and go to state 69
    DOT             reduce using rule 64 (expr_ID -> IDENTIFIER .)
    AT              reduce using rule 64 (expr_ID -> IDENTIFIER .)
    PLUS            reduce using rule 64 (expr_ID -> IDENTIFIER .)
    MINUS           reduce using rule 64 (expr_ID -> IDENTIFIER .)
    TIMES           reduce using rule 64 (expr_ID -> IDENTIFIER .)
    DIVIDE          reduce using rule 64 (expr_ID -> IDENTIFIER .)
    LT              reduce using rule 64 (expr_ID -> IDENTIFIER .)
    LE              reduce using rule 64 (expr_ID -> IDENTIFIER .)
    EQUALS          reduce using rule 64 (expr_ID -> IDENTIFIER .)
    SEMI            reduce using rule 64 (expr_ID -> IDENTIFIER .)
    RPAREN          reduce using rule 64 (expr_ID -> IDENTIFIER .)
    THEN            reduce using rule 64 (expr_ID -> IDENTIFIER .)
    LOOP            reduce using rule 64 (expr_ID -> IDENTIFIER .)
    OF              reduce using rule 64 (expr_ID -> IDENTIFIER .)
    COMMA           reduce using rule 64 (expr_ID -> IDENTIFIER .)
    RBRACE          reduce using rule 64 (expr_ID -> IDENTIFIER .)
    ELSE            reduce using rule 64 (expr_ID -> IDENTIFIER .)
    POOL            reduce using rule 64 (expr_ID -> IDENTIFIER .)
    IN              reduce using rule 64 (expr_ID -> IDENTIFIER .)
    FI              reduce using rule 64 (expr_ID -> IDENTIFIER .)


state 37

    (9) feature -> IDENTIFIER COLON TYPE LARROW expression .
    (38) expr_dispatch -> expression . DOT IDENTIFIER LPAREN args_list RPAREN
    (39) expr_dispatch -> expression . DOT IDENTIFIER LPAREN RPAREN
    (40) expr_dispatch -> expression . AT TYPE DOT IDENTIFIER LPAREN args_list RPAREN
    (41) expr_dispatch -> expression . AT TYPE DOT IDENTIFIER LPAREN RPAREN
    (54) expr_mathcondition -> expression . PLUS expression
    (55) expr_mathcondition -> expression . MINUS expression
    (56) expr_mathcondition -> expression . TIMES expression
    (57) expr_mathcondition -> expression . DIVIDE expression
    (58) expr_mathcondition -> expression . LT expression
    (59) expr_mathcondition -> expression . LE expression
    (60) expr_mathcondition -> expression . EQUALS expression

    SEMI            reduce using rule 9 (feature -> IDENTIFIER COLON TYPE LARROW expression .)
    DOT             shift and go to state 70
    AT              shift and go to state 71
    PLUS            shift and go to state 72
    MINUS           shift and go to state 73
    TIMES           shift and go to state 74
    DIVIDE          shift and go to state 75
    LT              shift and go to state 76
    LE              shift and go to state 77
    EQUALS          shift and go to state 78


state 38

    (17) expression -> expr_assign .

    DOT             reduce using rule 17 (expression -> expr_assign .)
    AT              reduce using rule 17 (expression -> expr_assign .)
    PLUS            reduce using rule 17 (expression -> expr_assign .)
    MINUS           reduce using rule 17 (expression -> expr_assign .)
    TIMES           reduce using rule 17 (expression -> expr_assign .)
    DIVIDE          reduce using rule 17 (expression -> expr_assign .)
    LT              reduce using rule 17 (expression -> expr_assign .)
    LE              reduce using rule 17 (expression -> expr_assign .)
    EQUALS          reduce using rule 17 (expression -> expr_assign .)
    SEMI            reduce using rule 17 (expression -> expr_assign .)
    RPAREN          reduce using rule 17 (expression -> expr_assign .)
    THEN            reduce using rule 17 (expression -> expr_assign .)
    LOOP            reduce using rule 17 (expression -> expr_assign .)
    OF              reduce using rule 17 (expression -> expr_assign .)
    COMMA           reduce using rule 17 (expression -> expr_assign .)
    RBRACE          reduce using rule 17 (expression -> expr_assign .)
    ELSE            reduce using rule 17 (expression -> expr_assign .)
    POOL            reduce using rule 17 (expression -> expr_assign .)
    IN              reduce using rule 17 (expression -> expr_assign .)
    FI              reduce using rule 17 (expression -> expr_assign .)


state 39

    (18) expression -> expr_let .

    DOT             reduce using rule 18 (expression -> expr_let .)
    AT              reduce using rule 18 (expression -> expr_let .)
    PLUS            reduce using rule 18 (expression -> expr_let .)
    MINUS           reduce using rule 18 (expression -> expr_let .)
    TIMES           reduce using rule 18 (expression -> expr_let .)
    DIVIDE          reduce using rule 18 (expression -> expr_let .)
    LT              reduce using rule 18 (expression -> expr_let .)
    LE              reduce using rule 18 (expression -> expr_let .)
    EQUALS          reduce using rule 18 (expression -> expr_let .)
    SEMI            reduce using rule 18 (expression -> expr_let .)
    RPAREN          reduce using rule 18 (expression -> expr_let .)
    THEN            reduce using rule 18 (expression -> expr_let .)
    LOOP            reduce using rule 18 (expression -> expr_let .)
    OF              reduce using rule 18 (expression -> expr_let .)
    COMMA           reduce using rule 18 (expression -> expr_let .)
    RBRACE          reduce using rule 18 (expression -> expr_let .)
    ELSE            reduce using rule 18 (expression -> expr_let .)
    POOL            reduce using rule 18 (expression -> expr_let .)
    IN              reduce using rule 18 (expression -> expr_let .)
    FI              reduce using rule 18 (expression -> expr_let .)


state 40

    (19) expression -> expr_dispatch .

    DOT             reduce using rule 19 (expression -> expr_dispatch .)
    AT              reduce using rule 19 (expression -> expr_dispatch .)
    PLUS            reduce using rule 19 (expression -> expr_dispatch .)
    MINUS           reduce using rule 19 (expression -> expr_dispatch .)
    TIMES           reduce using rule 19 (expression -> expr_dispatch .)
    DIVIDE          reduce using rule 19 (expression -> expr_dispatch .)
    LT              reduce using rule 19 (expression -> expr_dispatch .)
    LE              reduce using rule 19 (expression -> expr_dispatch .)
    EQUALS          reduce using rule 19 (expression -> expr_dispatch .)
    SEMI            reduce using rule 19 (expression -> expr_dispatch .)
    RPAREN          reduce using rule 19 (expression -> expr_dispatch .)
    THEN            reduce using rule 19 (expression -> expr_dispatch .)
    LOOP            reduce using rule 19 (expression -> expr_dispatch .)
    OF              reduce using rule 19 (expression -> expr_dispatch .)
    COMMA           reduce using rule 19 (expression -> expr_dispatch .)
    RBRACE          reduce using rule 19 (expression -> expr_dispatch .)
    ELSE            reduce using rule 19 (expression -> expr_dispatch .)
    POOL            reduce using rule 19 (expression -> expr_dispatch .)
    IN              reduce using rule 19 (expression -> expr_dispatch .)
    FI              reduce using rule 19 (expression -> expr_dispatch .)


state 41

    (20) expression -> expr_loop .

    DOT             reduce using rule 20 (expression -> expr_loop .)
    AT              reduce using rule 20 (expression -> expr_loop .)
    PLUS            reduce using rule 20 (expression -> expr_loop .)
    MINUS           reduce using rule 20 (expression -> expr_loop .)
    TIMES           reduce using rule 20 (expression -> expr_loop .)
    DIVIDE          reduce using rule 20 (expression -> expr_loop .)
    LT              reduce using rule 20 (expression -> expr_loop .)
    LE              reduce using rule 20 (expression -> expr_loop .)
    EQUALS          reduce using rule 20 (expression -> expr_loop .)
    SEMI            reduce using rule 20 (expression -> expr_loop .)
    RPAREN          reduce using rule 20 (expression -> expr_loop .)
    THEN            reduce using rule 20 (expression -> expr_loop .)
    LOOP            reduce using rule 20 (expression -> expr_loop .)
    OF              reduce using rule 20 (expression -> expr_loop .)
    COMMA           reduce using rule 20 (expression -> expr_loop .)
    RBRACE          reduce using rule 20 (expression -> expr_loop .)
    ELSE            reduce using rule 20 (expression -> expr_loop .)
    POOL            reduce using rule 20 (expression -> expr_loop .)
    IN              reduce using rule 20 (expression -> expr_loop .)
    FI              reduce using rule 20 (expression -> expr_loop .)


state 42

    (21) expression -> expr_block .

    DOT             reduce using rule 21 (expression -> expr_block .)
    AT              reduce using rule 21 (expression -> expr_block .)
    PLUS            reduce using rule 21 (expression -> expr_block .)
    MINUS           reduce using rule 21 (expression -> expr_block .)
    TIMES           reduce using rule 21 (expression -> expr_block .)
    DIVIDE          reduce using rule 21 (expression -> expr_block .)
    LT              reduce using rule 21 (expression -> expr_block .)
    LE              reduce using rule 21 (expression -> expr_block .)
    EQUALS          reduce using rule 21 (expression -> expr_block .)
    SEMI            reduce using rule 21 (expression -> expr_block .)
    RPAREN          reduce using rule 21 (expression -> expr_block .)
    THEN            reduce using rule 21 (expression -> expr_block .)
    LOOP            reduce using rule 21 (expression -> expr_block .)
    OF              reduce using rule 21 (expression -> expr_block .)
    COMMA           reduce using rule 21 (expression -> expr_block .)
    RBRACE          reduce using rule 21 (expression -> expr_block .)
    ELSE            reduce using rule 21 (expression -> expr_block .)
    POOL            reduce using rule 21 (expression -> expr_block .)
    IN              reduce using rule 21 (expression -> expr_block .)
    FI              reduce using rule 21 (expression -> expr_block .)


state 43

    (22) expression -> expr_newtype .

    DOT             reduce using rule 22 (expression -> expr_newtype .)
    AT              reduce using rule 22 (expression -> expr_newtype .)
    PLUS            reduce using rule 22 (expression -> expr_newtype .)
    MINUS           reduce using rule 22 (expression -> expr_newtype .)
    TIMES           reduce using rule 22 (expression -> expr_newtype .)
    DIVIDE          reduce using rule 22 (expression -> expr_newtype .)
    LT              reduce using rule 22 (expression -> expr_newtype .)
    LE              reduce using rule 22 (expression -> expr_newtype .)
    EQUALS          reduce using rule 22 (expression -> expr_newtype .)
    SEMI            reduce using rule 22 (expression -> expr_newtype .)
    RPAREN          reduce using rule 22 (expression -> expr_newtype .)
    THEN            reduce using rule 22 (expression -> expr_newtype .)
    LOOP            reduce using rule 22 (expression -> expr_newtype .)
    OF              reduce using rule 22 (expression -> expr_newtype .)
    COMMA           reduce using rule 22 (expression -> expr_newtype .)
    RBRACE          reduce using rule 22 (expression -> expr_newtype .)
    ELSE            reduce using rule 22 (expression -> expr_newtype .)
    POOL            reduce using rule 22 (expression -> expr_newtype .)
    IN              reduce using rule 22 (expression -> expr_newtype .)
    FI              reduce using rule 22 (expression -> expr_newtype .)


state 44

    (23) expression -> expr_mathcondition .

    DOT             reduce using rule 23 (expression -> expr_mathcondition .)
    AT              reduce using rule 23 (expression -> expr_mathcondition .)
    PLUS            reduce using rule 23 (expression -> expr_mathcondition .)
    MINUS           reduce using rule 23 (expression -> expr_mathcondition .)
    TIMES           reduce using rule 23 (expression -> expr_mathcondition .)
    DIVIDE          reduce using rule 23 (expression -> expr_mathcondition .)
    LT              reduce using rule 23 (expression -> expr_mathcondition .)
    LE              reduce using rule 23 (expression -> expr_mathcondition .)
    EQUALS          reduce using rule 23 (expression -> expr_mathcondition .)
    SEMI            reduce using rule 23 (expression -> expr_mathcondition .)
    RPAREN          reduce using rule 23 (expression -> expr_mathcondition .)
    THEN            reduce using rule 23 (expression -> expr_mathcondition .)
    LOOP            reduce using rule 23 (expression -> expr_mathcondition .)
    OF              reduce using rule 23 (expression -> expr_mathcondition .)
    COMMA           reduce using rule 23 (expression -> expr_mathcondition .)
    RBRACE          reduce using rule 23 (expression -> expr_mathcondition .)
    ELSE            reduce using rule 23 (expression -> expr_mathcondition .)
    POOL            reduce using rule 23 (expression -> expr_mathcondition .)
    IN              reduce using rule 23 (expression -> expr_mathcondition .)
    FI              reduce using rule 23 (expression -> expr_mathcondition .)


state 45

    (24) expression -> expr_ID .

    DOT             reduce using rule 24 (expression -> expr_ID .)
    AT              reduce using rule 24 (expression -> expr_ID .)
    PLUS            reduce using rule 24 (expression -> expr_ID .)
    MINUS           reduce using rule 24 (expression -> expr_ID .)
    TIMES           reduce using rule 24 (expression -> expr_ID .)
    DIVIDE          reduce using rule 24 (expression -> expr_ID .)
    LT              reduce using rule 24 (expression -> expr_ID .)
    LE              reduce using rule 24 (expression -> expr_ID .)
    EQUALS          reduce using rule 24 (expression -> expr_ID .)
    SEMI            reduce using rule 24 (expression -> expr_ID .)
    RPAREN          reduce using rule 24 (expression -> expr_ID .)
    THEN            reduce using rule 24 (expression -> expr_ID .)
    LOOP            reduce using rule 24 (expression -> expr_ID .)
    OF              reduce using rule 24 (expression -> expr_ID .)
    COMMA           reduce using rule 24 (expression -> expr_ID .)
    RBRACE          reduce using rule 24 (expression -> expr_ID .)
    ELSE            reduce using rule 24 (expression -> expr_ID .)
    POOL            reduce using rule 24 (expression -> expr_ID .)
    IN              reduce using rule 24 (expression -> expr_ID .)
    FI              reduce using rule 24 (expression -> expr_ID .)


state 46

    (25) expression -> expr_int .

    DOT             reduce using rule 25 (expression -> expr_int .)
    AT              reduce using rule 25 (expression -> expr_int .)
    PLUS            reduce using rule 25 (expression -> expr_int .)
    MINUS           reduce using rule 25 (expression -> expr_int .)
    TIMES           reduce using rule 25 (expression -> expr_int .)
    DIVIDE          reduce using rule 25 (expression -> expr_int .)
    LT              reduce using rule 25 (expression -> expr_int .)
    LE              reduce using rule 25 (expression -> expr_int .)
    EQUALS          reduce using rule 25 (expression -> expr_int .)
    SEMI            reduce using rule 25 (expression -> expr_int .)
    RPAREN          reduce using rule 25 (expression -> expr_int .)
    THEN            reduce using rule 25 (expression -> expr_int .)
    LOOP            reduce using rule 25 (expression -> expr_int .)
    OF              reduce using rule 25 (expression -> expr_int .)
    COMMA           reduce using rule 25 (expression -> expr_int .)
    RBRACE          reduce using rule 25 (expression -> expr_int .)
    ELSE            reduce using rule 25 (expression -> expr_int .)
    POOL            reduce using rule 25 (expression -> expr_int .)
    IN              reduce using rule 25 (expression -> expr_int .)
    FI              reduce using rule 25 (expression -> expr_int .)


state 47

    (26) expression -> expr_string .
